# GenFitExamples

./: README.md
GFResidualExample/: CMakeLists.txt  README.md  doc.md  minimal_genfit_residual_example.cpp
